linq and iterfaces

--- a/Game.WebUI/Components/Pages/Home.razor
+++ b/Game.WebUI/Components/Pages/Home.razor
@@ -96,6 +96,11 @@
     bool loggedin = false;
     string username = "";
 
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        
+    }
 
     void Login()
     {
